app/assets/stylesheets/_globals.scss
@import "variables";

*{
    font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
    box-sizing: border-box;
    color: $text;
}

*::-moz-focus-inner { 
    border: 0; 
    padding: 0; 
    outline: none;
}
*::-moz-focus-ring { 
    border: 0; 
    padding: 0; 
    outline: none;
}

::placeholder {
  color: transparentize($text, 0.5);
}

:-ms-input-placeholder {
  color: transparentize($text, 0.5) !important;
}

a{
    color: $blue;
    &:hover{
        text-decoration: none;
    }
    &:focus{
        background: $yellow;
        outline: 2px solid $yellow;
        color: $text;
    }
}

p{
    line-height: 1.5;
}

select::-ms-expand {
  display: none;
}

#roleSwitcherDropdown {
  width: 300px;
  background-position: 95% center;
}

.dropdown {
  width: 135px;
}

span.select2.select2-container {
  margin-left: 5px;
}

span.select2-container--disabled {
  opacity: 0.5;
}

span.selection {
  span.select2-selection.select2-selection--single {
    border: none;
    border-radius: 0;
    font-size: 0.9rem;
    background: $pale no-repeat 90% center url(asset_path('select-dark.svg'));
    background-size: 13px;
    height: 30px;
    span.select2-selection__rendered {
      line-height: 30px;
    }
    .select2-selection__arrow {
      display: none;
    }
    &:focus {
      outline: 2px solid $yellow;
    }
  }
  span.select2-selection.select2-selection--single[aria-expanded=true] {
    outline: 2px solid $yellow;
  }
}

.visually-hidden{
    position: absolute !important;
    height: 1px; 
    width: 1px;
    overflow: hidden;
    clip: rect(1px 1px 1px 1px);
    clip: rect(1px, 1px, 1px, 1px);
    white-space: nowrap;
}

.turbolinks-progress-bar {
    background-color: $yellow;
}

